initial commit for 13

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,21 @@
 1-2_main.c
 binary_tree_print.c
 _binary_tree_delete.c
+1-main
+2-main
+3-main
+4-main
+5-main
 6-main
+7-main
+8-main
+9-main
+10-main
+11-main
+12-main
+13-main
+14-main
+15-main
+16-main
+17-main
+18-main
